Update pull-request.yml for Azure Pipelines

--- a/.azure-pipelines/pull-request.yml
+++ b/.azure-pipelines/pull-request.yml
@@ -1,6 +1,10 @@
 name: $(date:yy)$(DayOfYear)$(rev:.r)
 
-trigger: none
+trigger:
+- master
+- milestones/*
+- releases/*
+- servicing/*
 
 variables:
   majorAndMinorVersion: '0.4'
