--- a/.azure-pipelines/templates/windows-build-and-unit-test.yml
+++ b/.azure-pipelines/templates/windows-build-and-unit-test.yml
@@ -12,29 +12,26 @@ steps:
   - script: $(Build.Repository.LocalPath)\Scripts\BuildGVFSForWindows.bat $(configuration) $(majorAndMinorVersion).$(revision)
     displayName: Run VFSForGit build script ($(configuration))
 
-  - script: $(Build.Repository.LocalPath)\MirrorProvider\Scripts\Windows\Build.bat $(configuration)
-    displayName: Build MirrorProvider ($(configuration))
-
   - script: $(Build.Repository.LocalPath)\Scripts\RunUnitTests.bat $(configuration)
     displayName: Run unit tests
 
-  - task: PublishTestResults@2
-    displayName: Publish unit test results
-    inputs:
-      testRunner: NUnit
-      testResultsFiles: "**\\TestResult.xml"
-      searchFolder: $(System.DefaultWorkingDirectory)
-      testRunTitle: Windows $(configuration) Unit Tests
-      publishRunAttachments: true
+  #- task: PublishTestResults@2
+  #  displayName: Publish unit test results
+  #  inputs:
+  #    testRunner: NUnit
+  #    testResultsFiles: "**\\TestResult.xml"
+  #    searchFolder: $(System.DefaultWorkingDirectory)
+  #    testRunTitle: Windows $(configuration) Unit Tests
+  #    publishRunAttachments: true
 
-  - script: $(Build.Repository.LocalPath)\Scripts\CI\CreateBuildDrop.bat $(configuration) $(Build.ArtifactStagingDirectory)\Tests
-    displayName: Create functional test drop.
+  #- script: $(Build.Repository.LocalPath)\Scripts\CI\CreateBuildDrop.bat $(configuration) $(Build.ArtifactStagingDirectory)\Tests
+  #  displayName: Create functional test drop.
 
-  - task: PublishBuildArtifacts@1
-    displayName: Publish functional test drop artifact.
-    inputs:
-      pathtoPublish: $(Build.ArtifactStagingDirectory)\Tests
-      artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
-      parallel: true
-      parallelCount: 8
-    condition: succeededOrFailed()
+  #- task: PublishBuildArtifacts@1
+  #  displayName: Publish functional test drop artifact.
+  #  inputs:
+  #    pathtoPublish: $(Build.ArtifactStagingDirectory)\Tests
+  #    artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
+  #    parallel: true
+  #    parallelCount: 8
+  #  condition: succeededOrFailed()
