azure-pipelines: drop mac steps that don't work
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.azure-pipelines/templates/macos-build-and-unit-test.yml
+++ b/.azure-pipelines/templates/macos-build-and-unit-test.yml
@@ -9,9 +9,6 @@ steps:
   - script: Scripts/Mac/BuildGVFSForMac.sh $(configuration)
     displayName: Build VFSForGit $(configuration)
 
-  - script: MirrorProvider/Scripts/Mac/Build.sh $(configuration)
-    displayName: Build MirrorProvider $(configuration)
-
   - task: PublishTestResults@2
     displayName: Publish test results
     inputs:
@@ -22,14 +19,14 @@ steps:
       publishRunAttachments: true
     condition: succeededOrFailed()
 
-  - script: Scripts/Mac/CI/CreateBuildDrop.sh $(configuration) $(Build.ArtifactStagingDirectory)/Tests
-    displayName: Create functional test drop.
+  #- script: Scripts/Mac/CI/CreateBuildDrop.sh $(configuration) $(Build.ArtifactStagingDirectory)/Tests
+  #  displayName: Create functional test drop.
 
-  - task: PublishBuildArtifacts@1
-    displayName: Publish functional test drop artifact.
-    inputs:
-      pathtoPublish: $(Build.ArtifactStagingDirectory)/Tests
-      artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
-      parallel: true
-      parallelCount: 8
-    condition: succeededOrFailed()
+  #- task: PublishBuildArtifacts@1
+  #  displayName: Publish functional test drop artifact.
+  #  inputs:
+  #    pathtoPublish: $(Build.ArtifactStagingDirectory)/Tests
+  #    artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
+  #    parallel: true
+  #    parallelCount: 8
+  #  condition: succeededOrFailed()
