Enable Mac build and unit test pipeline

--- a/.azure-pipelines/pull-request.yml
+++ b/.azure-pipelines/pull-request.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
     - template: templates/windows-build-and-unit-test.yml
 
-  #- job: macOS
-  #  pool:
-  #    vmImage: macOS 10.13
-  #  steps:
-  #  - template: templates/macos-build-and-unit-test.yml
+  - job: macOS
+    pool:
+      vmImage: macOS 10.13
+    steps:
+    - template: templates/macos-build-and-unit-test.yml
