PR Feedback: Drop rename and don't target high sierra

--- a/.azure-pipelines/pull-request.yml
+++ b/.azure-pipelines/pull-request.yml
@@ -23,6 +23,6 @@ jobs:
 
   - job: macOS
     pool:
-      vmImage: macOS 10.13
+      name: 'Hosted macOS'
     steps:
     - template: templates/macos-build-and-unit-test.yml
