--- a/.azure-pipelines/templates/macos-build-and-unit-test.yml
+++ b/.azure-pipelines/templates/macos-build-and-unit-test.yml
@@ -25,14 +25,14 @@ steps:
       publishRunAttachments: true
     condition: succeededOrFailed()
 
-  #- script: Scripts/Mac/CI/CreateBuildDrop.sh $(configuration) $(Build.ArtifactStagingDirectory)/Tests
-  #  displayName: Create functional test drop.
+  - script: Scripts/Mac/CI/CreateBuildDrop.sh $(configuration) $(Build.ArtifactStagingDirectory)/Tests
+    displayName: Create functional test drop.
 
-  #- task: PublishBuildArtifacts@1
-  #  displayName: Publish functional test drop artifact.
-  #  inputs:
-  #    pathtoPublish: $(Build.ArtifactStagingDirectory)/Tests
-  #    artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
-  #    parallel: true
-  #    parallelCount: 8
-  #  condition: succeededOrFailed()
+  - task: PublishBuildArtifacts@1
+    displayName: Publish functional test drop artifact.
+    inputs:
+      pathtoPublish: $(Build.ArtifactStagingDirectory)/Tests
+      artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
+      parallel: true
+      parallelCount: 8
+    condition: succeededOrFailed()
