--- a/.azure-pipelines/templates/macos-functional-test.yml
+++ b/.azure-pipelines/templates/macos-functional-test.yml
@@ -6,6 +6,12 @@ steps:
       packageType: sdk
       version: '2.1.301'
 
+  - task: InstallAppleCertificate@2
+    displayName: 'Install Apple certificate'
+    inputs:
+      certSecureFile: 'PrjFSKextCertExpiresJun6_2020_v2.p12'
+      certPwd: '$(kext.certificate.password)'
+
   - bash: rm -rf $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)/BuildOutput/Git/*
     displayName: Clean previous Git installations
 
@@ -44,12 +50,6 @@ steps:
   - bash: $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)/src/Scripts/Mac/CleanupFunctionalTests.sh
     displayName: Cleanup
     condition: always()
-
-  - task: PublishBuildArtifacts@1
-    displayName: Publish kext logs
-    inputs:
-      pathtoPublish: $(Build.ArtifactStagingDirectory)/kext.log
-      artifactName: kext.log
 
   - bash: sudo rm -rf $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)
     displayName: Cleanup phase 2
