--- a/.azure-pipelines/templates/macos-functional-test.yml
+++ b/.azure-pipelines/templates/macos-functional-test.yml
@@ -6,6 +6,12 @@ steps:
       packageType: sdk
       version: '2.1.301'
 
+  - task: InstallAppleCertificate@2
+    displayName: 'Install Apple certificate'
+    inputs:
+      certSecureFile: 'PrjFSKextCertExpiresJun6_2020_v2.p12'
+      certPwd: '$(kext.certificate.password)'
+
   - bash: rm -rf $(Build.BinariesDirectory)/FunctionalTests_$(platformFriendlyName)_$(configuration)/BuildOutput/Git/*
     displayName: Clean previous Git installations
 
