Update paths to match shallow repo structure
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/Scalar.Build/Scalar.PreBuild.csproj
+++ b/Scalar.Build/Scalar.PreBuild.csproj
@@ -179,8 +179,8 @@
           Outputs="$(RestoreTimestampPath)"
           DependsOnTargets="ScalarPreBuild"
           Condition="'$(OS)' == 'Windows_NT'">
-    <Exec Command="call $(MSBuildThisFileDirectory)..\..\Scripts\RestorePackages.bat $(Configuration)"
-          WorkingDirectory="$(MSBuildThisFileDirectory)../../" />
+    <Exec Command="call $(MSBuildThisFileDirectory)..\Scripts\RestorePackages.bat $(Configuration)"
+          WorkingDirectory="$(MSBuildThisFileDirectory)../" />
     <Touch Files="$(RestoreTimestampPath)" AlwaysCreate="true" />
   </Target>
 
