--- a/Scalar.Common/Scalar.Common.csproj
+++ b/Scalar.Common/Scalar.Common.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\LibGit2Sharp.NativeBinaries.props" />
   <Import Project="..\Scalar.Build\Scalar.cs.props" />
+  <Import Project="..\Scalar.Build\LibGit2Sharp.NativeBinaries.props" />
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.1;netstandard2.0</TargetFrameworks>
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\..\BuildOutput\Scalar.Build\ScalarConstants.GitVersion.cs" Link="ScalarConstants.GitVersion.cs" />
+    <Compile Include="..\..\BuildOutput\Scalar.Build\ScalarConstants.GitVersion.cs" Link="ScalarConstants.GitVersion.cs" />
   </ItemGroup>
 
   <ItemGroup>
