Create output directory before touching files
Signed-off-by: Derrick Stolee <stolee@gmail.com>

--- a/Scalar.Build/Scalar.PreBuild.csproj
+++ b/Scalar.Build/Scalar.PreBuild.csproj
@@ -181,6 +181,7 @@
           Condition="'$(OS)' == 'Windows_NT'">
     <Exec Command="call $(MSBuildThisFileDirectory)..\Scripts\RestorePackages.bat $(Configuration)"
           WorkingDirectory="$(MSBuildThisFileDirectory)../" />
+    <MakeDir Directories="$(BuildOutputDir)"/>
     <Touch Files="$(RestoreTimestampPath)" AlwaysCreate="true" />
   </Target>
 
