Update logo for Scalar
Signed-off-by: Derrick Stolee <stolee@gmail.com>

--- a/Scalar/Scalar.Windows.csproj
+++ b/Scalar/Scalar.Windows.csproj
@@ -139,7 +139,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="GitVirtualFileSystem.ico">
+    <Content Include="Images\scalar.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
