--- a/Scalar.Service.UI/Scalar.Service.UI.csproj
+++ b/Scalar.Service.UI/Scalar.Service.UI.csproj
@@ -74,7 +74,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Scalar\GitVirtualFileSystem.ico">
+    <Content Include="..\Scalar\Images\scalar.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
