--- a/.azure-pipelines/pull-request.yml
+++ b/.azure-pipelines/pull-request.yml
@@ -1,23 +1,31 @@
 name: $(date:yy)$(DayOfYear)$(rev:.r)
 
-trigger: none
+trigger:
+  - master
+  - releases/shipped
 
 pr:
-- master
-- milestones/*
-- releases/*
-- servicing/*
+  - master
+  - milestones/*
+  - releases/*
+  - servicing/*
 
 variables:
   majorAndMinorVersion: '0.4'
   revision: '$(Build.BuildNumber)'
   platform: 'x64'
-  configuration: release
 
 jobs:
   - job: Windows_Build_and_UnitTests
     variables:
       platformFriendlyName: Windows
+    strategy:
+      maxParallel: 2
+      matrix:
+        debug:
+          configuration: Debug
+        release:
+          configuration: Release
     pool:
       vmImage: vs2017-win2016
     steps:
@@ -26,6 +34,13 @@ jobs:
   - job: macOS_Build_and_UnitTests
     variables:
       platformFriendlyName: macOS
+    strategy:
+      maxParallel: 2
+      matrix:
+        debug:
+          configuration: Debug
+        release:
+          configuration: Release
     pool:
       name: 'Hosted macOS'
     steps:
@@ -34,6 +49,7 @@ jobs:
   - job: macOS_FunctionalTests
     variables:
       platformFriendlyName: macOS
+      configuration: Release
     timeoutInMinutes: 30
     pool:
       name: 'Hosted macOS'
@@ -47,6 +63,7 @@ jobs:
     timeoutInMinutes: 30
     variables:
       platformFriendlyName: Windows
+      configuration: Release
     pool:
       vmImage: vs2017-win2016
     dependsOn: Windows_Build_and_UnitTests
