--- a/Scalar.Build/Scalar.props
+++ b/Scalar.Build/Scalar.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup Label="Parameters">
     <ScalarVersion>0.2.173.2</ScalarVersion>
-    <GitPackageVersion>2.20190820.1</GitPackageVersion>
+    <GitPackageVersion>2.20190822.3-sc</GitPackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Label="DefaultSettings">
