--- a/.azure-pipelines/templates/windows-build-and-unit-test.yml
+++ b/.azure-pipelines/templates/windows-build-and-unit-test.yml
@@ -25,10 +25,10 @@ steps:
       publishRunAttachments: true
 
   - script: $(Build.Repository.LocalPath)\Scripts\CI\CreateBuildDrop.bat $(configuration) $(Build.ArtifactStagingDirectory)\Tests
-    displayName: Create build drop.
+    displayName: Create functional test drop
 
   - task: PublishBuildArtifacts@1
-    displayName: Publish functional test drop artifact.
+    displayName: Publish functional test drop
     inputs:
       pathtoPublish: $(Build.ArtifactStagingDirectory)\Tests
       artifactName: "FunctionalTests_$(platformFriendlyName)_$(configuration)"
@@ -40,7 +40,7 @@ steps:
     displayName: Create installer drop
 
   - task: PublishBuildArtifacts@1
-    displayName: Publish installers.
+    displayName: Publish installers
     inputs:
       pathToPublish: $(Build.ArtifactStagingDirectory)\Installers
       artifactName: "Installers_$(platformFriendlyName)_$(configuration)"
