--- a/.azure-pipelines/pull-request.yml
+++ b/.azure-pipelines/pull-request.yml
@@ -1,5 +1,3 @@
-name: $(date:yy)$(DayOfYear)$(rev:.r)
-
 trigger:
   - master
   - releases/shipped
@@ -11,9 +9,7 @@ pr:
   - servicing/*
 
 variables:
-  majorAndMinorVersion: '0.4'
-  revision: '$(Build.BuildNumber)'
-  platform: 'x64'
+  branchCounter: $[counter(variables['Build.SourceBranch'], 0)]
 
 jobs:
   - job: Windows_Build_and_UnitTests
@@ -29,6 +25,8 @@ jobs:
     pool:
       vmImage: vs2017-win2016
     steps:
+    - powershell: $(Build.Repository.LocalPath)/Scripts/CI/Set-Version.ps1 -SourceBranchCounter $(branchCounter)
+      displayName: "Compute product version"
     - template: templates/windows-build-and-unit-test.yml
 
   - job: macOS_Build_and_UnitTests
@@ -44,6 +42,8 @@ jobs:
     pool:
       name: 'Hosted macOS'
     steps:
+    - powershell: $(Build.Repository.LocalPath)/Scripts/CI/Set-Version.ps1 -SourceBranchCounter $(branchCounter)
+      displayName: "Compute product version"
     - template: templates/macos-build-and-unit-test.yml
 
   - job: macOS_FunctionalTests
