--- a/Scalar/Scalar.Windows.csproj
+++ b/Scalar/Scalar.Windows.csproj
@@ -116,6 +116,7 @@
     <Compile Include="CommandLine\DehydrateVerb.cs" />
     <Compile Include="CommandLine\DiagnoseVerb.cs" />
     <Compile Include="CommandLine\ScalarVerb.cs" />
+    <Compile Include="CommandLine\SparseVerb.cs" />
     <Compile Include="CommandLine\LogVerb.cs" />
     <Compile Include="CommandLine\MountVerb.cs" />
     <Compile Include="CommandLine\PrefetchVerb.cs" />
