--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 # Do not normalize any line endings.
 ###############################################################################
 * -text
+*.cs diff=csharp
+
